--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>J_QUERY</title>
 </head>
 <body>
-    <h1>JQUERY</h1>
+    <h1>JQUERY</h1><br>
+    <h2>PRAGATI</h2>
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" 
     integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
